--- a/toolbox/Dockerfile
+++ b/toolbox/Dockerfile
@@ -3,6 +3,7 @@ FROM ubuntu:18.04
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
     awscli \
+    bind-utils \
     curl \
     iproute2 \
     iputils-ping \
