--- a/toolbox/Dockerfile
+++ b/toolbox/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:18.04
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
     awscli \
-    bind-utils \
+    bind9-host \
     curl \
     iproute2 \
     iputils-ping \
