[dev] toolbox - ubuntu 20.04 & whois

--- a/toolbox/Dockerfile
+++ b/toolbox/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:18.04
+FROM ubuntu:20.04
 
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
@@ -18,5 +18,6 @@ RUN apt-get update \
     time \
     unzip \
     wget \
+    whois \
     zip \
  && rm -rf /var/lib/apt/lists/*
