[dev] ADMINER_VERSION=4.8.1

--- a/adminer/Dockerfile
+++ b/adminer/Dockerfile
@@ -18,12 +18,10 @@ RUN apk add --no-cache \
 
 WORKDIR /var/adminer
 
-ARG ADMINER_VERSION=4.7.7
+ARG ADMINER_VERSION=4.8.1
 ARG ADMINER_FLAVOUR="-en"
-ARG ADMINER_CHECKSUM="d2884278a3f331673c9fe58d3456db875a48270fd7b7ba37492d132b074d0eaa"
 
-RUN curl -L https://github.com/vrana/adminer/releases/download/v${ADMINER_VERSION}/adminer-${ADMINER_VERSION}${ADMINER_FLAVOUR}.php -o adminer.php && \
-    echo "${ADMINER_CHECKSUM}  adminer.php"|sha256sum -c -
+RUN curl -L https://github.com/vrana/adminer/releases/download/v${ADMINER_VERSION}/adminer-${ADMINER_VERSION}${ADMINER_FLAVOUR}.php -o adminer.php
 
 COPY index.php /var/adminer/index.php
 COPY php.ini /etc/php7/conf.d/99_docker.ini
